--- a/DashboardPage.xaml
+++ b/DashboardPage.xaml
@@ -5,13 +5,26 @@
              xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"            
              ios:Page.UseSafeArea="true">
 
-    <NavigationPage.TitleView  >
-        <StackLayout  Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" >
-            <Image Source="seclogo.png"  HeightRequest="40"  VerticalOptions="CenterAndExpand"/>
-            <StackLayout  Orientation="Vertical" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" Spacing="0">
-                <Label x:Name="lbl_title" Text="State Election Commission, H.P." Style="{StaticResource NavigationLabelColor}" FontSize="20" FontAttributes="Bold" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" />
-            </StackLayout>
-        </StackLayout>
+    <NavigationPage.TitleView>
+        <Grid ColumnDefinitions="Auto,*" HorizontalOptions="Fill" VerticalOptions="Center">
+            <Image Grid.Column="0" 
+                   Source="seclogo.png" 
+                   HeightRequest="40" 
+                   VerticalOptions="Center"/>
+            <Grid Grid.Column="1" 
+                  RowDefinitions="Auto" 
+                  VerticalOptions="Center" 
+                  HorizontalOptions="Center">
+                <Label Grid.Row="0"
+                       x:Name="lbl_title" 
+                       Text="State Election Commission, H.P." 
+                       Style="{StaticResource NavigationLabelColor}" 
+                       FontSize="20" 
+                       FontAttributes="Bold" 
+                       HorizontalTextAlignment="Center" 
+                       VerticalTextAlignment="Center" />
+            </Grid>
+        </Grid>
     </NavigationPage.TitleView>
 
     <ContentPage.ToolbarItems>
@@ -27,7 +40,7 @@
         </Grid.RowDefinitions>
 
         <!-- Header Section -->
-        <Label x:Name="lbl_heading" Grid.Row="0" FontSize="18" BackgroundColor="Navy" TextColor="White" FontAttributes="Bold" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" Margin="0,0,0,5"/>
+        <Label x:Name="lbl_heading" Grid.Row="0" FontSize="18" BackgroundColor="Navy" TextColor="White" FontAttributes="Bold" HorizontalOptions="Fill" HorizontalTextAlignment="Center" Margin="0,0,0,5"/>
 
         <!-- Main Content Frame -->
         <Frame Grid.Row="1" HasShadow="True" CornerRadius="15" BackgroundColor="White" BorderColor="#07a6db" Margin="0,5,0,5" Padding="15">
@@ -45,7 +58,7 @@
                 </Grid.RowDefinitions>
 
                 <!-- Title -->
-                <Label x:Name="lbl_heading1" Grid.Row="0" FontSize="18" HorizontalOptions="CenterAndExpand" FontAttributes="Bold" TextColor="Navy" TextDecorations="Underline" Margin="0,0,0,10"/>
+                <Label x:Name="lbl_heading1" Grid.Row="0" FontSize="18" HorizontalOptions="Center" FontAttributes="Bold" TextColor="Navy" TextDecorations="Underline" Margin="0,0,0,10"/>
 
                 <!-- Radio Button Section -->
                 <Grid Grid.Row="1" Margin="0,0,0,10">
@@ -83,12 +96,12 @@
                             <ColumnDefinition Width="7.5*"/>
                             <ColumnDefinition Width="2.5*"/>
                         </Grid.ColumnDefinitions>
-                        <Label Grid.Column="0" VerticalOptions="Center" FontSize="16" x:Name="lblexptype" HorizontalOptions="StartAndExpand" TextColor="Navy" FontAttributes="Bold"/>
-                        <Label Grid.Column="1" VerticalOptions="Center" FontSize="16" x:Name="lblAmount" HorizontalOptions="EndAndExpand" TextColor="Navy" FontAttributes="Bold"/>
+                        <Label Grid.Column="0" VerticalOptions="Center" FontSize="16" x:Name="lblexptype" HorizontalOptions="Start" TextColor="Navy" FontAttributes="Bold"/>
+                        <Label Grid.Column="1" VerticalOptions="Center" FontSize="16" x:Name="lblAmount" HorizontalOptions="End" TextColor="Navy" FontAttributes="Bold"/>
                     </Grid>
 
                     <!-- ListView -->
-                    <ListView Grid.Row="1" x:Name="listView_expendituredetailstypewise" HasUnevenRows="True" VerticalOptions="FillAndExpand" SeparatorColor="Transparent" SelectionMode="None" ItemTapped="listView_expendituredetailstypewise_ItemTapped">
+                    <ListView Grid.Row="1" x:Name="listView_expendituredetailstypewise" HasUnevenRows="True" VerticalOptions="Fill" SeparatorColor="Transparent" SelectionMode="None" ItemTapped="listView_expendituredetailstypewise_ItemTapped">
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <ViewCell Appearing="ViewCell_Appearing">
@@ -97,8 +110,8 @@
                                             <ColumnDefinition Width="8*"/>
                                             <ColumnDefinition Width="2*"/>
                                         </Grid.ColumnDefinitions>
-                                        <Label Grid.Column="0" VerticalOptions="Center" HorizontalOptions="StartAndExpand" FontSize="16" Text="{Binding displaytitle}" TextColor="Navy"/>
-                                        <Label Grid.Column="1" VerticalOptions="Center" HorizontalOptions="EndAndExpand" FontSize="16" Text="{Binding amount}" TextColor="Navy"/>
+                                        <Label Grid.Column="0" VerticalOptions="Center" HorizontalOptions="Start" FontSize="16" Text="{Binding displaytitle}" TextColor="Navy"/>
+                                        <Label Grid.Column="1" VerticalOptions="Center" HorizontalOptions="End" FontSize="16" Text="{Binding amount}" TextColor="Navy"/>
                                     </Grid>
                                 </ViewCell>
                             </DataTemplate>
@@ -107,8 +120,8 @@
                 </Grid>
 
                 <!-- Footer Labels -->
-                <Label Grid.Row="5" Margin="0,10,0,5" Padding="0" x:Name="lbl_tapfooter" HorizontalOptions="CenterAndExpand" FontAttributes="Bold" FontSize="14" TextColor="Navy"/>
-                <Label Grid.Row="6" Margin="0,0,0,10" Padding="0" x:Name="lbl_tapfooter1" HorizontalOptions="CenterAndExpand" FontAttributes="Bold" FontSize="12" TextColor="#0066CC"/>
+                <Label Grid.Row="5" Margin="0,10,0,5" Padding="0" x:Name="lbl_tapfooter" HorizontalOptions="Center" FontAttributes="Bold" FontSize="14" TextColor="Navy"/>
+                <Label Grid.Row="6" Margin="0,0,0,10" Padding="0" x:Name="lbl_tapfooter1" HorizontalOptions="Center" FontAttributes="Bold" FontSize="12" TextColor="#0066CC"/>
 
                 <!-- Buttons -->
                 <Button Grid.Row="7" x:Name="btn_finalsubmit" Clicked="btn_finalsubmit_Clicked" FontAttributes="Bold" BackgroundColor="Navy" TextColor="White" FontSize="16" Margin="0,10,0,5" CornerRadius="8"/>
@@ -128,7 +141,7 @@
             </Grid.ColumnDefinitions>
 
             <!-- Home Tab -->
-            <Grid Grid.Column="0" HorizontalOptions="FillAndExpand">
+            <Grid Grid.Column="0" HorizontalOptions="Fill">
                 <Grid.GestureRecognizers>
                     <TapGestureRecognizer Tapped="Tab_Home_Tapped"/>
                 </Grid.GestureRecognizers>
@@ -141,7 +154,7 @@
             </Grid>
 
             <!-- Add Expenses Tab -->
-            <Grid Grid.Column="1" HorizontalOptions="FillAndExpand">
+            <Grid Grid.Column="1" HorizontalOptions="Fill">
                 <Grid.GestureRecognizers>
                     <TapGestureRecognizer Tapped="Tab_New_Tapped"/>
                 </Grid.GestureRecognizers>
@@ -154,7 +167,7 @@
             </Grid>
 
             <!-- More Tab -->
-            <Grid Grid.Column="2" HorizontalOptions="FillAndExpand">
+            <Grid Grid.Column="2" HorizontalOptions="Fill">
                 <Grid.GestureRecognizers>
                     <TapGestureRecognizer Tapped="Tab_Settings_Tapped"/>
                 </Grid.GestureRecognizers>
@@ -169,10 +182,10 @@
 
         <ContentView x:Name="Loading_activity" BackgroundColor="#C0808080" Padding="20, 20" IsVisible="false" AbsoluteLayout.LayoutBounds="0, 0, 1, 1" AbsoluteLayout.LayoutFlags="All">
             <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
-                <Frame BackgroundColor="White" HorizontalOptions="FillAndExpand">
-                    <StackLayout Orientation="Horizontal" Margin="6" HorizontalOptions="FillAndExpand">
+                <Frame BackgroundColor="White" HorizontalOptions="Fill">
+                    <StackLayout Orientation="Horizontal" Margin="6" HorizontalOptions="Fill">
                         <ActivityIndicator IsVisible="true" IsRunning="true" Margin="5"/>
-                        <Label x:Name="lbl_PleaseWait" Text="Please Wait ..." TextColor="Black" FontAttributes="Bold" HorizontalOptions="FillAndExpand" WidthRequest="600" VerticalTextAlignment="Center"/>
+                        <Label x:Name="lbl_PleaseWait" Text="Please Wait ..." TextColor="Black" FontAttributes="Bold" HorizontalOptions="Fill" WidthRequest="600" VerticalTextAlignment="Center"/>
                     </StackLayout>
                 </Frame>
             </StackLayout>
